# LogoKraft

./: .gitignore  README.md  form_info.md  overall_plan.md
backend/: .env.example  .gitignore  FRONTEND_DESIGN_SPECIFICATION.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_OAUTH_EXAMPLES.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  OAUTH_SETUP_GUIDE.md  PROJECT_OVERVIEW.md  README.md  backendplan.md  design2.md  model_selection.md  pyproject.toml  quick_prompt_demo.py  test_sse.html  verify_setup.py
backend/app/: main.py
backend/app/config/: settings.py
backend/app/middleware/: rate_limiter.py
backend/app/models/: schemas.py
backend/app/routes/: auth_routes.py  brand_kit_routes.py  project_routes.py  stream_routes.py  stripe_routes.py  user_routes.py
backend/app/services/: batch_image_generation_service.py  brand_kit_service.py  credit_service.py  gemini_service.py  image_generation_service.py  oauth_service.py  orchestrator_service.py  prompt_engineering_service.py  simple_refinement_service.py  stripe_service.py  supabase_service.py  user_service.py
backend/docs/archive/: COMPLETE_APP_FLOW.md  SIMPLE_LOGO_REFINEMENT_FLOW.md
backend/docs/milestones/: MILESTONE_2_COMPLETE.md  MILESTONE_3_PLAN.md
backend/supabase/migrations/: 001_create_brand_projects.sql  002_create_generated_assets.sql  003_create_storage_buckets.sql  004_add_simple_refinement_support.sql  005_create_secure_refinement_functions.sql
backend/utils/: analyze_prompt_types.py  test_prompt_categories.py
